--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 <body>
     <!-- Header Section -->
     <header>
+
+        <div class="video-container">
+            <video autoplay loop muted>
+                <source src="#" types="video/mp4">
+            </video>
+        </div>
+
+
         <nav>
-            <h1>Nexon</h1>
+            <h1 class="nexon2">Nexon</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -30,7 +38,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <p class="nexon">NEXON</p>
-            <h2>Innovative Business Solutions by Nexon</h2></br></br>
+            <h2 class="headline">Innovative Business Solutions by Nexon</h2></br></br>
             <button onclick="showServices()" class="cta-button"><a href="register.html" 
              style="text-decoration: none; color: inherit;">
             Get Started</button></a>
