--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -25,62 +25,62 @@
             </div>
 
             <div class="sidebar">
-                <a href="#">
+                <a href="dashboard.html">
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#">
+                <a href="users.html">
                     <span class="material-icons-sharp">
                         person_outline
                     </span>
                     <h3>Users</h3>
                 </a>
-                <a href="#">
+                <a href="history.html">
                     <span class="material-icons-sharp">
                         receipt_long
                     </span>
                     <h3>History</h3>
                 </a>
-                <a href="#" class="active">
+                <a href="analytics.html" class="active">
                     <span class="material-icons-sharp">
                         insights
                     </span>
                     <h3>Analytics</h3>
                 </a>
-                <a href="#">
+                <a href="tickets.html">
                     <span class="material-icons-sharp">
                         mail_outline
                     </span>
                     <h3>Tickets</h3>
                     <span class="message-count">27</span>
                 </a>
-                <a href="#">
+                <a href="sale_list.html">
                     <span class="material-icons-sharp">
                         inventory
                     </span>
                     <h3>Sale List</h3>
                 </a>
-                <a href="#">
+                <a href="reports.html">
                     <span class="material-icons-sharp">
                         report_gmailerrorred
                     </span>
                     <h3>Reports</h3>
                 </a>
-                <a href="#">
+                <a href="settings.html">
                     <span class="material-icons-sharp">
                         settings
                     </span>
                     <h3>Settings</h3>
                 </a>
-                <a href="#">
+                <a href="newlogin.html">
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New Login</h3>
                 </a>
-                <a href="#">
+                <a href="logout.html">
                     <span class="material-icons-sharp">
                         logout
                     </span>
